重新修改后Deque也行了